Squished some bugs

--- a/src/Components/SuperHeroApp.css
+++ b/src/Components/SuperHeroApp.css
@@ -1,11 +1,15 @@
 .rowContainer {
   display: inline-flex;
   flex-direction: row;
-  width: 100%;
   padding-left: 10%;
   padding-right: 10%;
 }
 
 .teamContainer {
-  width: 50;
+  width: 30%;
+  padding: 5%;
+}
+.resultsContainer {
+  width: 30%;
+  padding: 5%;
 }
